tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AndSoItBegins-AAAAAAAAAAAAAAAAAAAAAA==__SticksnStones-AAAAAAAAAAAAAAAAAAAAAg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2,
  "prerequisites": [
    0
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This book has a built-in reading light, lucky you! You can read about quests while you're waiting for the night to be over, but for now, you may want to get the basics done. If it isn't dark already, go out and collect some gravel and wood.\n\nKeep in mind that you need food, so look for Pam's Harvestcraft gardens. Save some of the drops from them for seeds. Alternatively, right-click the gardens with an empty hand to get the garden item itself. If you place it somewhere else, it will spread into more of the same garden up to a limit within that area.\n\nMake sure to read the info-quests linked to the first quest, they have important info!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lSticks 'n Stones",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    0
  ],
  "rewards": [],
  "tasks": []
}
