tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AndSoItBegins-AAAAAAAAAAAAAAAAAAAAAA==__Tools-AAAAAAAAAAAAAAAAAAAABQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 5,
  "prerequisites": [
    4
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you've got a shelter and a crafting table, you should make some tools, unless you'd like to continue punching trees with your bare hands.\n\nYou should probably make the axe first so you can get wood for the rest more easily.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 1,
    "name": "§9§lTools",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    4
  ],
  "rewards": [],
  "tasks": []
}
