tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AndSoItBegins-AAAAAAAAAAAAAAAAAAAAAA==__WhatYouSow-AAAAAAAAAAAAAAAAAAAABw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 7,
  "prerequisites": [
    6
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If, by chance, you did read the previous quest and planted the carrots, then you're fine.\n\nMeanwhile, you should turn some more fruits and vegetables into seeds, and increase the size of your farm to get a steady supply of food.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§l...What You Sow",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    6
  ],
  "rewards": [],
  "tasks": []
}
