tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AndSoItBegins-AAAAAAAAAAAAAAAAAAAAAA==__YouReap-AAAAAAAAAAAAAAAAAAAABg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 6,
  "prerequisites": [
    5
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You won't always get food rewards from the quests, so it might be a good idea to take care of that problem.\n\nAs you've crafted a hoe already, go and find some water nearby to make a field. With this modpack you can only make farmland within range of water. Let's trade some sticks for a carrot, so you can start your own farm.\n\nTo get other wheat, use a hoe on grass away from water. You'll get Witchery seeds too - save those for later.\n\nStart planting a Cotton field because it's a key early-game resource.\n\nYou can also get seeds from villages, and grow the seeds from the Pam's garden food.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lYou Reap...",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    5
  ],
  "rewards": [],
  "tasks": []
}
