tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AndSoItBegins-AAAAAAAAAAAAAAAAAAAAAA==__YourFirstNight-AAAAAAAAAAAAAAAAAAAAAA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 0,
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "Hello, friend, and welcome to GTNH!\n\nDon't get used to things being nice and comfy, because in about ten minutes the sun will set, and unlike Vanilla Minecraft, there's no light whatsoever at night but plenty of Infernal mobs coming to get you. So your first task is to find food and shelter for the night.\n\nBut by the end of this quest tab you will have a bed to make things easier.\n\nYou don't need to keep this book. Even if you don't have the item, you can press Tilde (~) to view it at any time...unless you decided to change the keybind.\n\nIf you need any extra help or just want to hang out, feel free to visit our Discord server at [url]https://discord.gg/gtnh[/url]. And yes, the links are clickable! On the Discord, select your tech tier in #role-select - it will help people to tailor their advice to your situation.\n\nMany GTNH topics are explained in our Wiki at [url]https://wiki.gtnewhorizons.com/wiki/Main_Page[/url]. It does not have the same extent and structure as the Questbook, but some things are much better with pictures and tables! The wiki also has tips on extra topics like what additional mods might work with the pack, how GTNH can be installed for modern Java versions or how to set up a server.\n\nAdditionally, there is a spreadsheet at [url]https://www.gtnewhorizons.com/spreadsheet[/url] for the info you would want a spreadsheet for.\n\nIf you play through a launcher that relies on [warn]CurseForge[/warn], be aware that it doesn't always work properly. It doesn't play well with all the custom versions of mods that this pack has. So if you have any problems, first switch to another launcher like MultiMC, Prism, or Technic. The wiki has instructions there as well. The latest version of the pack is available on the Discord channel from #announcements or with the !download command.\n\nHopefully you didn't get munched by a monster while reading this, good luck!",
    "global_share": false,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lYour First Night",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
